--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,12 @@ dependencies:
   flutter_animated_button: ^2.0.0
   progress_state_button: "^1.0.3"
   sembast: ^3.1.1
-#  flutter_launcher_name: ^0.0.1
+  vibration: ^1.7.3
+  permission_handler: ^8.1.6
+  fluttertoast: ^8.0.8
+  path_provider: ^2.0.5
+  home_widget: ^0.1.3
+  touch_ripple_effect: 2.1.3
 
 dev_dependencies:
   flutter_test:
