--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,6 +45,23 @@ android {
     }
 }
 
+dependencies {
+    // Architectural Components
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+
+    implementation "com.tonyodev.fetch2:fetch2:3.0.12"
+    implementation "com.tonyodev.fetch2okhttp:fetch2okhttp:3.0.12"
+
+    // Coroutine Lifecycle Scopes
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
+}
 flutter {
     source '../..'
 }
