Multiple widgets added successfully

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
 }
 
