--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "net.michnovka.dockontrol"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -68,6 +68,10 @@ dependencies {
     implementation 'io.github.pilgr:paperdb:2.7.1'
 
     implementation 'com.android.support:multidex:1.0.3'
+//    spinner view
+//    implementation "com.github.skydoves:powerspinner:1.1.7"
+    implementation 'com.asksira.android:dropdownview:1.1.1'
+    implementation 'com.andkulikov:transitionseverywhere:2.1.0'
 
 }
 flutter {
