--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,9 +34,11 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        vectorDrawables.useSupportLibrary = true
 
         multiDexEnabled true
     }
+
 
     buildTypes {
         release {
