--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter_svg: ^0.22.0
   sqflite:
   path:
+  cryptoutils: ^0.5.0
+  crypto: ^3.0.1
+  base32: 2.1.0
   cached_network_image: ^3.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +47,14 @@ dependencies:
   path_provider: ^2.0.5
   home_widget: ^0.1.3
   touch_ripple_effect: 2.1.3
+
+dependency_overrides:
+#  convert: ^3.0.0
+  crypto: ^3.0.0
+  dart_otp: ^1.3.0
+  base32: ^1.0.1
+#  dotp: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
