--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependency_overrides:
   crypto: ^3.0.0
   dart_otp: ^1.3.0
   base32: ^1.0.1
+  encrypted_shared_preferences: ^2.0.0
 #  dotp: ^1.0.2
 
 
