--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,7 +30,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "net.michnovka.dockontrol"
-        minSdkVersion 18
+        minSdkVersion 20
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -44,7 +44,10 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.debug // for debugging purpose
+//            signingConfig signingConfigs.config
+            shrinkResources false
+            minifyEnabled false
         }
     }
 }
@@ -71,10 +74,11 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 //    spinner view
-//    implementation "com.github.skydoves:powerspinner:1.1.7"
     implementation 'com.asksira.android:dropdownview:1.1.1'
     implementation 'com.andkulikov:transitionseverywhere:2.1.0'
 
+    def biometric_version = '1.0.1'
+    implementation "androidx.biometric:biometric:$biometric_version"
 }
 flutter {
     source '../..'
